Được tạo bằng Colab

--- a/on_tap.ipynb
+++ b/on_tap.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "on_tap.ipynb",
-      "authorship_tag": "ABX9TyM1dcYOQ65o1vgwCRSjSHVF",
+      "authorship_tag": "ABX9TyNe0Y/2QuzBGFkcWGj5bxFi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +128,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Bài 3. Đếm số lần nhập đúng mật khẩu (while)**\n",
+        "# **Bài 3. Đếm số lần nhập đúng mật khẩu (while + if)**\n",
         "\n",
         "Yêu cầu:\n",
         "\n",
